<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaveDeck"
        android:text="Save" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDeleteDeck"
        android:layout_below="@id/btnSaveDeck"
        android:text="Delete" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Deck"
        android:textSize="50dp"
        android:layout_below="@id/btnDeleteDeck"
        android:id="@+id/deckTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/deckTitle"
        android:id="@+id/recyclerview_flashcards_card" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="20dp"
        android:id="@+id/fabPlayDeck"
        android:src="@android:drawable/ic_media_play" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:id="@+id/fabAddCard"
        android:src="@android:drawable/ic_menu_add" />

</RelativeLayout>