<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save" />
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delete" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Front" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/card_edit_front"
            android:layout_weight="0.5" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Back" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/card_edit_back"
            android:layout_weight="0.5" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>