...
        android:layout_marginHorizontal="10dp"
        android:text="Write a Note"
        app:layout_constraintTop_toBottomOf="@+id/btnShortcutTimer"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/btnShortcutFlashcards"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:text="Practice Flashcards"
        app:layout_constraintTop_toBottomOf="@+id/btnShortcutNotes"
        tools:layout_editor_absoluteX="10dp" />
...
